deployment/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prime-spark
  labels:
    name: prime-spark
    project: prime-spark-ai
